portico-pages: Fix flex height issues with content.
This fixes the existing issue where the titles of content is chopped
off when the screen height is too small.

--- a/static/styles/landing-page.css
+++ b/static/styles/landing-page.css
@@ -868,7 +868,7 @@ a:not(.no-style):hover:before {
     }
 
     .features-app .main {
-        margin: 0px auto 20px;
+        margin: 0px auto;
         width: calc(100% - 40px);
     }
 
