--- a/templates/zerver/accounts_home.html
+++ b/templates/zerver/accounts_home.html
@@ -16,7 +16,7 @@ $(function () {
         <div class="lead">
             <h1 class="get-started">{{ _("Sign up for Zulip") }}</h1>
         </div>
-        <div class="app-main register-page-container">
+        <div class="app-main register-page-container white-box">
             <div class="register-form new-style">
                 {% if realm_name %}
                 <div class="left-side">
