--- a/templates/zerver/create_realm.html
+++ b/templates/zerver/create_realm.html
@@ -11,7 +11,7 @@ $(function () {
 </script>
 
 <div class="app register-page flex">
-    <div class="app-main register-page-container new-style">
+    <div class="app-main register-page-container new-style flex full-page">
         <div class="bg-image"></div>
 
         <div class="register-form">
@@ -40,7 +40,6 @@ $(function () {
                 {% endfor %}
             {% endif %}
         </div>
-
     </div>
 </div>
 {% endblock %}
