--- a/templates/zerver/dev_login.html
+++ b/templates/zerver/dev_login.html
@@ -3,7 +3,7 @@
 {# Login page. #}
 {% block portico_content %}
 <div class="app login-page flex full-page">
-    <div class="app-main login-page-container dev-login">
+    <div class="app-main login-page-container dev-login white-box">
         <div class="bg-image"></div>
 
         <h4 class="login-page-header">{{ _('Click on a user to log in!') }}</h4>
