--- a/templates/zerver/find_my_team.html
+++ b/templates/zerver/find_my_team.html
@@ -9,7 +9,7 @@
             <h1 class="get-started">{{ _("Find your team") }}…</h1>
         </div>
 
-        <div class="app-main find-team-page-container">
+        <div class="app-main find-team-page-container white-box">
             {% if emails %}
             <div id="results">
                 <p>
