--- a/templates/zerver/help/main.html
+++ b/templates/zerver/help/main.html
@@ -4,7 +4,7 @@
 
 {% block portico_content %}
 
-<div class="app terms-page">
+<div class="app terms-page inline-block">
     <div class="app-main markdown">
     {% if not_index_page %}
         <div class="back-to-home">
