--- a/templates/zerver/reset.html
+++ b/templates/zerver/reset.html
@@ -9,7 +9,7 @@
             <h1 class="get-started">{{ _('Reset your password') }}</h1>
         </div>
 
-        <div class="app-main forgot-password-container new-style">
+        <div class="app-main forgot-password-container white-box new-style">
             <div class="bg-image"></div>
 
             <p>Forgot your password? No problem, we'll send a link to reset your password to the email you signed up with.</p>
