--- a/templates/zerver/terms.html
+++ b/templates/zerver/terms.html
@@ -4,7 +4,7 @@
 
 {% block portico_content %}
 
-<div class="app terms-page">
+<div class="app terms-page inline-block">
     <div class="app-main terms-page-container">
         {% if terms_of_service %}
             {{ terms_of_service|render_markdown_path }}
