--- a/templates/zerver/privacy.html
+++ b/templates/zerver/privacy.html
@@ -4,7 +4,7 @@
 
 {% block portico_content %}
 
-<div class="app terms-page">
+<div class="app terms-page inline-block">
     <div class="app-main terms-page-container">
 
         {% if privacy_policy %}
