emoji: Render emoji in (new) message bodies using sprite sheets.
This fixes a longstanding issue (ever since we introduced sprite
sheets) that Zulip was using 2 copies of the full emoji set; one in
the sprite sheets and another in a collection of individual images.

This will have a nontrivial impact on the performance of loading a
Zulip browser window containing a lot of emoji.

An unfortunate side effect is that this may break rendering of emoji
on mobile.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2344,17 +2344,12 @@ button.topic_edit_cancel {
     height: 25px;
     width: 25px;
     position: relative;
-    top: 3px;
+    top: 6px;
     margin-top: -7px;
 }
 
-div.emoji {
-    /* This is needed when using the sprite sheets */
-    top: 6px;
-}
-
 img.emoji {
-    /* This is the right offset for <img> style emoji */
+    /* This is the right offset for the realm emoji <img> style emoji */
     top: 3px;
 }
 
