Fix avatar sizing issue.
The avatars were previously their natural width, however the avatars
should always be 100% width since the height and width of the images
are known to always be equal.

--- a/static/styles/portico-signin.css
+++ b/static/styles/portico-signin.css
@@ -484,6 +484,8 @@ html {
     height: 100px;
     background-color: #444;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.15);
+
+    background-size: 100% auto;
 }
 
 .split-view .org-header .info-box {
