--- a/templates/zerver/reset_done.html
+++ b/templates/zerver/reset_done.html
@@ -1,6 +1,10 @@
 {% extends "zerver/portico_signup.html" %}
 {% block portico_content %}
-<h1 style="margin-top: 20px">{{ _("We've reset your password!") }}</h1>
-<p>{% trans login_url=url('django.contrib.auth.views.login') %}Please <a href="{{ login_url }}">log in</a>.{% endtrans %}</p>
+<div class="flex full-page new-style">
+    <div class="inline-block">
+        <h1 style="margin-top: 20px">{{ _("We've reset your password!") }}</h1>
+        <p>{% trans login_url=url('django.contrib.auth.views.login') %}Please <a href="{{ login_url }}">log in</a>.{% endtrans %}</p>
+    </div>
+</div>
 
 {% endblock %}
