--- a/templates/zerver/reset_emailed.html
+++ b/templates/zerver/reset_emailed.html
@@ -1,12 +1,10 @@
 {% extends "zerver/portico_signup.html" %}
 {% block portico_content %}
-    <div class="flex full-page new-style">
-        <div class="inline-block">
-            {% trans %}
-            <h1 style="margin-top: 20px">We just sent you a password reset!</h1>
-            <h1>Check your email to finish the process.</h1>
-            <p>(Or don't, but then why did you fill out this form?)</p>
-            {% endtrans %}
-        </div>
+<div class="flex full-page new-style">
+    <div class="inline-block">
+        <h1 style="margin-top: 20px">{{ _('We just sent you a password reset link!') }}</h1>
+        <h1>{{ _('Check your email to finish the process.') }}</h1>
+        <p>{{ _('(Or don't, but then why did you fill out this form?)') }}</p>
     </div>
+</div>
 {% endblock %}
