Replace filler text with landing page text.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -238,9 +238,10 @@ html {
                 <div class="il-block">
                     <h2>Organized</h2>
                     <p>
-                        Lorem ipsum delor sit amet. Alabama alaska arizona arkansas california colorado connecticut delaware florida georia hawaii iowa.
+                        Tired of important discussions being disrupted by automated messages, lunch plans and random links? Follow each conversation separately with Zulip.  Want to find a conversation from two months ago?  Zulip's fast and powerful search experience will delight you.
                     </p>
-                    <p>Illinois indiana iowa kansas kentucky louisiana, maine maryland massachusetts michigan minisota missippi missouri montana nebraska. Nevada. New Hampshire new jersey new mexico new york.
+                    <p>
+                        Share content with drag-and-drop file uploads, link previews and inline images.
                     </p>
                 </div>
             </div>
@@ -248,9 +249,7 @@ html {
                 <div class="il-block">
                     <h2>Fully Featured</h2>
                     <p>
-                        Lorem ipsum delor sit amet. Alabama alaska arizona arkansas california colorado connecticut delaware florida georia hawaii iowa.
-                    </p>
-                    <p>Illinois indiana iowa kansas kentucky louisiana, maine maryland massachusetts michigan minisota missippi missouri montana nebraska. Nevada. New Hampshire new jersey new mexico new york.
+                        Zulip has everything you want in group chat. Apps for the iPhone, Android and desktop.  More than 60 integrations (GitHub, Jira, Stripe, Zendesk, etc.). Keyboard shortcuts. Emoji reactions.  Need anything else?  We probably have it.
                     </p>
                 </div>
             </div>
@@ -258,9 +257,7 @@ html {
                 <div class="il-block">
                     <h2>Open Source</h2>
                     <p>
-                        Lorem ipsum delor sit amet. Alabama alaska arizona arkansas california colorado connecticut delaware florida georia hawaii iowa.
-                    </p>
-                    <p>Illinois indiana iowa kansas kentucky louisiana, maine maryland massachusetts michigan minisota missippi missouri montana nebraska. Nevada. New Hampshire new jersey new mexico new york.
+                        Want chat that’s customized for your needs? Zulip is 100% open source software.  With 75,000 words of developer documentation, a high quality code base and a welcoming community of hundreds of developers from around the world, it’s easy to jump in.
                     </p>
                 </div>
             </div>
@@ -285,18 +282,30 @@ html {
             <div class="platform-icons">
                 <div class="group">
                     <h2>Web</h2>
-                    <i class="icon-vector-desktop platform-icon"></i>
+                    <a href="/apps/">
+                        <i class="icon-vector-desktop platform-icon"></i>
+                    </a>
                 </div>
                 <div class="group">
                     <h2>Desktop</h2>
-                    <i class="icon-vector-apple platform-icon"></i>
-                    <i class="icon-vector-windows platform-icon"></i>
-                    <i class="icon-vector-linux platform-icon"></i>
+                    <a class="no-style" href="/apps/#mac">
+                        <i class="icon-vector-apple platform-icon"></i>
+                    </a>
+                    <a class="no-style" href="/apps/#windows">
+                        <i class="icon-vector-windows platform-icon"></i>
+                    </a>
+                    <a class="no-style" href="/apps/#linux">
+                        <i class="icon-vector-linux platform-icon"></i>
+                    </a>
                 </div>
                 <div class="group">
                     <h2>Mobile</h2>
-                    <i class="icon-vector-mobile-phone platform-icon"></i>
-                    <i class="icon-vector-android platform-icon"></i>
+                    <a class="no-style" href="/apps/#ios">
+                        <i class="icon-vector-mobile-phone platform-icon"></i>
+                    </a>
+                    <a class="no-style" href="/apps/#android">
+                        <i class="icon-vector-android platform-icon"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -441,9 +450,9 @@ html {
         <div class="padded-content">
             <div class="quote-container">
                 <blockquote>
-                    Lorem ipsum delor sit amet. Alabama alaska arizona arkansas california colorado connecticut delaware florida georia hawaii iowa. Illinois indiana iowa kansas kentucky louisiana, maine maryland massachusetts michigan minisota missippi missouri montana nebraska. Nevada. New Hampshire new jersey new mexico new york.
+                    Choosing Zulip over Slack as our group chat is one of the best decisions we've ever made. Zulip makes it easy for our community of 1000 Recursers around the world to stay involved, even years after their batches finish. No other tool has a user experience that scales to a community of our size.
                 </blockquote>
-                <cite>Akamai – over 2000 active users</cite>
+                <cite>Recurse Center – over 1000 active users</cite>
             </div>
 
             <hr />
